k8s/applications/utils/deluge/Deployment.deluge-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-web
  namespace: deluge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge-web
      app.kubernetes.io/version: '2.2.0'
      app.kubernetes.io/component: client
      app.kubernetes.io/part-of: deluge
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: deluge
      labels:
        app.kubernetes.io/name: deluge-web
        app.kubernetes.io/version: '2.2.0'
        app.kubernetes.io/component: client
        app.kubernetes.io/part-of: deluge
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: deluge-web
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: deluge-web
          # Dockerfile: https://github.com/home-operations/containers/blob/main/apps/deluge/Dockerfile
          image: ghcr.io/home-operations/deluge:2.2.0
          imagePullPolicy: Always
          command:
            - /usr/bin/deluge-web
            - --config=/config
            - --loglevel=info
            - --pidfile=/tmp/deluge-web.pid
            - --do-not-daemonize
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 128Mi}
            limits: {memory: 128Mi}
          ports:
            - {name: http, containerPort: 8112}
          startupProbe: {httpGet: {port: 8112, path: /}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 8112, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 8112, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: deluge-web-config-volume, mountPath: /config}
            - {name: tmp-volume, mountPath: /tmp}
      volumes:
        - {name: deluge-web-config-volume, emptyDir: {}}
        - {name: tmp-volume, emptyDir: {}}
