k8s/applications/utils/deluge/Deployment.deluged.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluged
  namespace: deluge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deluged
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: server
      app.kubernetes.io/part-of: deluge
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: deluge
      labels:
        app.kubernetes.io/name: deluged
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: deluge
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: deluged
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: deluged
          # Dockerfile: https://github.com/home-operations/containers/blob/main/apps/deluge/Dockerfile
          image: ghcr.io/home-operations/deluge:2.2.0@sha256:94a1ca18cff9816115ca873f1a0f7771a8414fd072150044e4e81c36e1a68ee0
          command:
            - /usr/bin/deluged
            - --config=/config
            - --loglevel=info
            - --pidfile=/tmp/deluged.pid
            - --do-not-daemonize
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 128Mi}
            limits: {memory: 256Mi}
          ports:
            - {name: daemon, containerPort: 58846, protocol: TCP}
            - {name: torrent-tcp, containerPort: 6881, protocol: TCP}
            - {name: torrent-udp, containerPort: 6881, protocol: UDP}
          startupProbe: {tcpSocket: {port: 58846}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 12}
          livenessProbe: {tcpSocket: {port: 58846}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {tcpSocket: {port: 58846}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: deluged-config-volume, mountPath: /config}
            - {name: downloads-volume, mountPath: /downloads}
            - {name: tmp-volume, mountPath: /tmp}
      volumes:
        - {name: deluged-conf-volume, configMap: {name: deluged-conf}}
        - {name: deluged-config-volume, persistentVolumeClaim: {claimName: deluged-config-pvc}}
        - {name: downloads-volume, persistentVolumeClaim: {claimName: deluge-downloads-pvc}}
        - {name: deluged-tls-volume, secret: {secretName: deluged-tls}}
        - {name: tmp-volume, emptyDir: {}}
