k8s/applications/utils/deluge/Deployment.yaml
# https://github.com/home-operations/containers
# https://github.com/home-operations/containers/blob/main/apps/deluge/Dockerfile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-deployment
  namespace: deluge
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: deluge
      labels:
        app.kubernetes.io/name: deluge
        app: deluge
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: deluged
          image: ghcr.io/home-operations/deluge:2
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          resources:
            requests:
              cpu: 100m
              memory: 1.5Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /downloads
        - name: deluge-web
          image: ghcr.io/home-operations/deluge:2
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8112
          resources:
            requests:
              cpu: 100m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 500Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: temp
              mountPath: /temp
            - name: data
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: longhorn-deluge-config-pvc
        - name: temp
          nfs:
            server: 192.168.6.20
            path: /mnt/nfs/homelab/k8s/deluge/config
        - name: data
          emptyDir: {}
