k8s/applications/utils/deluge/Service.http.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: deluge
spec:
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8112
      targetPort: 8112
