k8s/applications/utils/deluge/Service.torrent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: torrent
  namespace: deluge
  labels:
    arp.cilium.io/announce-service: default-arp-l2-announcement-policy
    arp.cilium.io/ip-pool: default-arp-ip-pool
  annotations:
    lbipam.cilium.io/ips: 192.168.2.10
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: torrent-tcp
      protocol: TCP
      port: 6881
      targetPort: torrent-tcp

    - name: torrent-udp
      protocol: UDP
      port: 6881
      targetPort: torrent-udp
