k8s/applications/utils/deluge/Service.web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: deluge
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
