k8s/applications/utils/deluge/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deluge-service
  namespace: deluge
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: torrent-tcp
      port: 6881
      targetPort: torrent-tcp
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: torrent-udp
      protocol: UDP
