k8s/applications/utils/deluge/Services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: deluge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: deluge-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: daemon
  namespace: deluge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: deluged
  ports:
    - name: daemon
      protocol: TCP
      port: 58846
      targetPort: daemon
---
apiVersion: v1
kind: Service
metadata:
  name: torrent
  namespace: deluge
  labels:
    arp.cilium.io/announce-service: default-arp-l2-announcement-policy
    arp.cilium.io/ip-pool: default-arp-ip-pool
  annotations:
    lbipam.cilium.io/ips: 192.168.2.10
    service.cilium.io/lb-mode: snat
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: deluged
  ports:
    - name: torrent-tcp
      protocol: TCP
      port: 6881
      targetPort: torrent-tcp

    - name: torrent-udp
      protocol: UDP
      port: 6881
      targetPort: torrent-udp
