k8s/applications/utils/deluge/TCPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: deluge-tcproute
  namespace: deluge
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: torrent-tcp
  rules:
    - backendRefs:
        - name: deluge-service
          port: 6881
