k8s/applications/utils/deluge/CiliumNetworkPolicy.deluge-web.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-delugeweb-ingress
  namespace: deluge
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: deluge-web}}
  ingress:
    - {fromEntities: [host], toPorts: [ports: [{port: '8112', protocol: TCP}]]}  # Host probes
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '8112', protocol: TCP}]]}  # Envoy Gateway
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-delugeweb-egress
  namespace: deluge
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: deluge-web}}
  egress:
    - {toEndpoints: [{matchLabels: {k8s:io.kubernetes.pod.namespace: deluge, app.kubernetes.io/name: deluged}}], toPorts: [ports: [{port: '58846', protocol: TCP}]]}  # deluged
